# AURO_final

./: .gitignore  LICENSE  README.md  README_cn.md  cleanup.sh  data_log_0.csv  data_log_1.csv  frames_2024-11-12_11.29.57.gv  frames_2024-12-24_00.04.02.gv  frames_2024-12-24_00.04.38.gv  frames_2024-12-24_00.53.55.gv  frames_2024-12-24_01.09.09.gv  frames_2024-12-24_01.11.02.gv  sync.sh
AURO_SOLUTION/: package.xml  setup.cfg  setup.py
OpencvNav2Solutions/: package.xml  setup.cfg  setup.py
OpencvNav2Solutions/OpencvNav2Solutions/: item_deceter.py
OpencvNav2Solutions/node/: item_detecter_node.py
assessment/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
assessment/log/: latest_build
auro_nav_demo/: setup.cfg  setup.py
auro_nav_demo/install/: local_setup.sh  setup.sh
auro_nav_demo/launch/: nav2_launch.py
auro_nav_demo/log/: latest_build
install/: local_setup.sh  setup.sh
log/: latest_build
ros2ballctrl/: setup.cfg  setup.py
ros2ballctrl/ros2ballctrl/: initial_pose_publisher.py  itemManagerClient.py  navigateToPose.py  robotController.py
solution/: package.xml  setup.py
solution/launch/: solution_launch.py  solution_nav2_launch.py
solution/params/: custom_nav2_params_namespaced.yaml
solution/solution/: do_transform_pose_example.py  ekf_pose.py  get_robot_pose.py  item_filter.py  item_manager copy.py  item_manager.py  robot_controller copy.py  robot_controller.py  robot_controller_old.py  robot_controller_tested.py  zone_manager.py
solution_interfaces/: CMakeLists.txt  package.xml
solution_interfaces/msg/: ItemList.msg  (+4 more)
(+26 files in other folders)
